# aiogram-bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  image.txt  main.py  parse.py  pyproject.toml  requirements.txt  start.ps1  translate.py
.github/workflows/: deploy.yml  docker-image.yml
handlers/: novel.py
resources/: chatgpt.py  database.py  parse.py  translate.py
src/: config.py  database.py  main.py  models.py  settings.py  test2.py
src/application/handlers/: admin.py  chat.py  images.py  novel.py
src/application/middlewares/: administrator.py
src/common/: logger.py
src/domain/common/: base.py  response.py  value.py
src/domain/states/: announcement.py
src/domain/users/: repository.py  user.py
src/handlers/: admin.py  chat.py  images.py  novel.py
src/infrastructure/: ioc.py
src/infrastructure/message_broker/: factories.py  main.py  message_broker.py  settings.py
src/infrastructure/repositories/: user.py
src/logic/models/: chatgpt.py  gemini.py  gigachat.py  kadinsky.py
src/logic/novel/: parse.py  shedule.py  translate.py
src/middlewares/: administrator.py
src/resources/: chatgpt.py  config.py  database.py  gemini.py  kadinsky.py  parse.py  shedule.py  translate.py
src/utils/: chatgpt.py  database.py  gemini.py  kadinsky.py  parse.py
src/utils/models/: chatgpt.py  gemini.py  kadinsky.py
tests/: test_parse.py
text2image/: Dockerfile  requirements.txt
text2image/src/: main.py
text2image/src/infrastructure/: ioc.py
translated/: 443.txt  444.txt  445.txt
(+6 files in other folders)
