[tool.poetry]
name = "aiogram-bot"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
g4f = "^0.2.7.1"
deep-translator = "^1.11.4"
apscheduler = "^3.10.4"
httpx = "^0.27.0"
openai = "^1.14.3"
google-generativeai = "^0.4.1"
aio-pika = "^9.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
